sauvegarde de la branche front 3 hmtl et 3 css + 1 script

--- a/bookings.html
+++ b/bookings.html
@@ -4,9 +4,9 @@
 
 <head> 
 
-<link rel="stylesheet" href="cart.css"/> 
+<link rel="stylesheet" href="bookings.css"/> 
 <meta charset="utf-8">
-<title>Your Cart</title>
+<title>Your Bookings</title>
 
 </head> 
 
@@ -28,8 +28,8 @@
     
       </div> 
 
-      <div id="container-cart">
-        <div class="cart-text">No tickets in your cart. Why not plan a trip?</div>
+      <div id="container-bookings">
+        <div class="bookings-text">No bookings yet. Why not plan a trip?</div>
 
       </div>
 
