--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <div id="header"> 
 
     <a id="nameoftheapp"> 
-        <button type="button" id="btn-tickethack">TicketHack</button>
+        <button type="button" id="btn-tickethack" href="index.html">TicketHack</button>
     </a> 
 
     <a id="cart">
-        <button type="button" id="btn-cart">Cart</button>
+        <button type="button" id="btn-cart" href="cart.html">Cart</button>
     </a>
 
     <a id="bookings"> 
-      <button type="button" id="btn-bookings">Bookings</button>
+      <button type="button" id="btn-bookings" href="bookings.html">Bookings</button>
     </a> 
 
   </div> 
@@ -44,7 +44,7 @@
         <div id="white-box-left">
           <input id="departure" type="text" placeholder="Departure">
           <input id="arrival" type="text" placeholder="Arrival">
-          <input type="date"> 
+          <input id="calendar" type="date"> 
             <button type="button" id="btn-search">Search</button>
 
           </div>
