--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
           </div>
 
         <div id="white-box-right">
-          <img id="logo" src="images/train.png" alt="Logo">
+          <img id="logo-train" src="images/train.png" alt="Logo">
           <p1>It's time to book your future trip</p1>
 
-          <img id="logo" src="images/notfound.png" alt="Logo">
+          <img id="logo-notfound" src="images/notfound.png" alt="Logo">
           <p2>No trip found.</p2>
+        
         </div>
         </div>
       </div>
